fix the swagger malfunction
