# app/models/auth_model.go
@@ -10,3 +10,8 @@ type SignIn struct {
 	Email    string `json:"email" validate:"required,email,lte=255"`
 	Password string `json:"password" validate:"required,lte=255"`
 }
+
+type TokenResponse struct {
+	Access  string `json:"access" example:"access-token"`
+	Refresh string `json:"refresh" example:"refresh-token"`
+}
